# saas-toolkit

./: .gitignore  .python-version  404.html  Makefile  README.md  index.html  mkdocs.yml  requirements.txt  setup.cfg
.github/workflows/: ci.yml  python-publish.yml
Core/SDK/Example/: index.html
Core/SDK/introduction/: index.html
Database - SQL/models/: index.html
FastAPI/configuration/: index.html
Integrations/Redis/: index.html
docs/: getting_started.md  index.md
docs/Core/SDK/: Example.md
docs/Database - SQL/: models.md
docs/FastAPI/: configuration.md
docs/Integrations/: Redis.md
docs/core/: models.md
docs/core/SDK/: Example.md  introduction.md
docs/db/: models.md
docs/fastapi/: configuration.md
getting_started/: index.html
search/: search_index.json
src/kitman/: __init__.py  conf.py  errors.py  kitman.py
src/kitman/core/: __init__.py  configs.py  domain.py  dynamic.py  services.py
src/kitman/db/: mixins.py  models.py
src/kitman/fastapi/: conf.py  errors.py
src/saas_toolkit/: __init__.py  conf.py  config.py  errors.py
src/saas_toolkit/core/: __init__.py  dynamic.py  models.py  schemas.py  templating.py
src/saas_toolkit/errors/: __init__.py  errors.py
src/saas_toolkit/fastapi/: __init__.py  conf.py  config.py  database.py  errors.py
tests/: conftest.py  test_config.py  test_errors.py  types.py  variables.py
tests/core/: test_converters.py  test_dynamic.py  test_models.py  test_sdk.py  test_templating.py
tests/db/: test_models.py
tests/fastapi/: test_config.py  test_database.py  test_errors.py
(+44 files in other folders)
