[metadata]
name = saas-toolkit
version = 0.0.1
author = Mads Kronborg
author_email = me@madskronborg.dk
description = A handy toolkit for building saas applications
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/madskronborg/saas-toolkit
project_urls =
    Bug Tracker = https://github.com/madskronborg/saas-toolkit/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires = 
    pydantic[orjson]
    ormar
    fastapi
    deepmerge
    httpx[http2]

[options.packages.find]
where = src

[pydocstyle]
inherit = false
ignore = D100,D203,D405
match = .*\.py